# SVMInterpreter

./: .gitignore  README.md  SVMInterpreter.cabal
app/: Main.hs  test.svm
src/: ADT.hs  Core.hs  Interpreter.hs  Parser.hs
src/Files/: ifthenelse.svm  initList.svm  squareRoot.svm  sumList.svm
test/: CoreSpec.hs  InterpreterSpec.hs  ParserSpec.hs
